--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -19,7 +19,7 @@
     cursor_blink = False
     cursor_shape = underline
     cursor_color = "#bbbbbb"
-    font = FiraCode Nerd Font 10
+    font = FiraCode Nerd Font Mono 10
     foreground_color = "#f8f8f2"
     scrollbar_position = hidden
     scrollback_infinite = True
