--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,12 +51,10 @@ TMUX_FZF_LAUNCH_KEY="C-f"
 set -g @fingers-key F
 
 
-if-shell "uname | grep -q Darwin" {
-  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-} {
-  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+if-shell '[[ $(uname -s) = Linux ]]' { 
+   bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard" 
+} { 
+   bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy" 
 }
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
