--- a/.ideavimrc
+++ b/.ideavimrc
@@ -42,6 +42,7 @@ set clipboard^=unnamedplus,unname,ideaput
 
 """ Mappings
 nnoremap <Space>a :action ShowIntentionActions<CR>
+vnoremap <Space>a :action ShowIntentionActions<CR>
 nnoremap <Space>rr :action RenameElement<CR>
 nnoremap <leader><cr> :nohlsearch<CR>
 
