--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -52,7 +52,7 @@ map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
 
 map f11 kitten zoom_toggle.py
-map f12 launch --type=overlay --stdin-source=@screen_scrollback /home/samhv/.local/bin/fzf --no-sort --no-mouse --exact -i
+map f12 launch --type=overlay --stdin-source=@screen_scrollback $HOME/.local/bin/fzf --no-sort --no-mouse --exact -i
 
 map kitty_mod+alt+k combine : clear_terminal clear active : send_text normal,application \x0c
 
