--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -613,5 +613,16 @@
     "window.zoomLevel": 1,
     "vim.handleKeys": {
         "<C-f>": false
-    }
+    },
+    "blockman.n01LineHeight": 0,
+    "workbench.colorCustomizations": {
+        "editor.lineHighlightBackground": "#1073cf2d",
+        "editor.lineHighlightBorder": "#9fced11f"
+    },
+    "editor.wordWrap": "off",
+    "diffEditor.wordWrap": "off",
+    "editor.guides.indentation": false,
+    "editor.guides.bracketPairs": false,
+    "editor.inlayHints.enabled": false,
+    "blockman.n04ColorComboPreset": "Small Galaxy (Gradients)"
 }
