--- a/.ideavimrc
+++ b/.ideavimrc
@@ -43,50 +43,50 @@ set ideastrictmode
 set clipboard^=unnamedplus,unname,ideaput
 
 """ Mappings
-nnoremap <leader>a <Action>(ShowIntentionActions)
-vnoremap <leader>a <Action>(ShowIntentionActions)
-nnoremap <leader>re <Action>(RenameElement)
-nnoremap <leader>rf <Action>(RenameFile)
+nnoremap <leader>a :action ShowIntentionActions<cr>
+vnoremap <leader>a :action ShowIntentionActions<cr>
+nnoremap <leader>re :action RenameElement<cr>
+nnoremap <leader>rf :action RenameFile<cr>
 nnoremap <leader><cr> :nohlsearch<CR>
 
 
 " actions
-nnoremap <leader>q <Action>(CloseContent)
-nnoremap <leader>Q <Action>(ReopenClosedTab)
-nnoremap <leader>\ <Action>(VimFilePrevious)
-nnoremap <leader>s <Action>(SearchEverywhere)
-nnoremap <leader>E <Action>(Switcher)
-nnoremap <leader>t <Action>(FileStructurePopup)
-nnoremap <leader>T <Action>(GotoSymbol)
-nnoremap <leader>A <Action>(GotoAction)
-nnoremap <Leader>ic <Action>(InspectCode)
-nnoremap gR <Action>(ShowUsages)
-nnoremap gr <Action>(FindUsages)
-nnoremap gi <Action>(GotoImplementation)
+nnoremap <leader>q :action CloseContent<cr>
+nnoremap <leader>Q :action ReopenClosedTab<cr>
+nnoremap <leader>\ :action VimFilePrevious<cr>
+nnoremap <leader>s :action SearchEverywhere<cr>
+nnoremap <leader>E :action Switcher<cr>
+nnoremap <leader>t :action FileStructurePopup<cr>
+nnoremap <leader>T :action GotoSymbol<cr>
+nnoremap <leader>A :action GotoAction<cr>
+nnoremap <Leader>ic :action InspectCode<cr>
+nnoremap gR :action ShowUsages<cr>
+nnoremap gr :action FindUsages<cr>
+nnoremap gi :action GotoImplementation<cr>
 
 " unimpaired mappings
 nnoremap [<leader> O<esc>j
 nnoremap ]<leader> o<esc>k
-nnoremap [q <Action>(PreviousOccurence)
-nnoremap ]q <Action>(NextOccurence)
-nnoremap [m <Action>(MethodUp)
-nnoremap ]m <Action>(MethodDown)
-nnoremap [h <Action>(VcsShowPrevChangeMarker)
-nnoremap ]h <Action>(VcsShowNextChangeMarker)
-nnoremap [b <Action>(PreviousTab)
-nnoremap ]b <Action>(NextTab)
-nnoremap [d <Action>(GotoPreviousError)
-nnoremap ]d <Action>(GotoNextError)
+nnoremap [q :action PreviousOccurence<cr>
+nnoremap ]q :action NextOccurence<cr>
+nnoremap [m :action MethodUp<cr>
+nnoremap ]m :action MethodDown<cr>
+nnoremap [h :action VcsShowPrevChangeMarker<cr>
+nnoremap ]h :action VcsShowNextChangeMarker<cr>
+nnoremap [b :action PreviousTab<cr>
+nnoremap ]b :action NextTab<cr>
+nnoremap [d :action GotoPreviousError<cr>
+nnoremap ]d :action GotoNextError<cr>
 
 " Moving lines
-nmap [e <Action>(MoveLineUp)
-nmap ]e <Action>(MoveLineDown)
+nmap [e :action MoveLineUp<cr>
+nmap ]e :action MoveLineDown<cr>
 " Moving statements
-nmap [s <Action>(MoveStatementUp)
-nmap ]s <Action>(MoveStatementDown)
+nmap [s :action MoveStatementUp<cr>
+nmap ]s :action MoveStatementDown<cr>
 
 " Search
-nmap <leader>/ <Action>(FindInPath)
+nmap <leader>/ :action FindInPath<cr>
 
 " built-in navigation to navigated items works better
 nnoremap <c-o> :action Back<cr>
@@ -97,19 +97,21 @@ nnoremap g<c-i> <c-i>
 
 
 " built in search looks better
-nnoremap / <Action>(Replace)
+nnoremap / :action Replace<cr>
+vnoremap / :action Replace<cr>
 " but preserve ideavim search
 nnoremap g/ /
+vnoremap g/ /
 
-nmap <leader>w <Action>(SaveDocument)
+nmap <leader>w :action SaveDocument<cr>
 
-nmap <leader>f <Action>(GotoFile)
+nmap <leader>f :action GotoFile<cr>
 
-map \r <Action>(ReformatCode)
-nmap \t <Action>(Refactorings.QuickListPopupAction)
-vmap \t <Action>(Refactorings.QuickListPopupAction)
+map \r :action ReformatCode<cr>
+nmap \t :action Refactorings.QuickListPopupAction<cr>
+vmap \t :action Refactorings.QuickListPopupAction<cr>
 
-nmap crc <Action>(StringManipulation.ToCamelCase)
-nmap crm <Action>(StringManipulation.ToPascalCase)
-nmap cr_ <Action>(StringManipulation.ToSnakeCase)
-nmap cru <Action>(StringManipulation.ToScreamingSnakeCase)
+nmap crc :action StringManipulation.ToCamelCase<cr>
+nmap crm :action StringManipulation.ToPascalCase<cr>
+nmap cr_ :action StringManipulation.ToSnakeCase<cr>
+nmap cru :action StringManipulation.ToScreamingSnakeCase<cr>
