--- a/.config/rtx/config.toml
+++ b/.config/rtx/config.toml
@@ -3,4 +3,31 @@ experimental = true
 legacy_version_file_disable_tools = ['java']
 
 [tools]
-chezmoi = "2.38.0"
+aria2     ="1.36.0"
+awscli    ="2.8.5"
+buildpack ="0.27.0-rc1"
+devspace  ="6.2.4"
+direnv    ="2.32.2"
+dive      ="0.10.0"
+gcloud    ="434.0.0"
+go-sdk    ="1.20.2"
+golang    ="1.20.2"
+helm      ="3.11.1"
+jq        ="1.6"
+just      ="1.11.0"
+k6        ="0.43.1"
+k9s       ="0.26.3"
+krew      ="0.4.3"
+kubecm    ="0.21.1"
+kubectl   ="1.24.12"
+kubectx   ="0.9.4"
+nodejs    ="18.15.0"
+peco      ="0.5.10"
+rust      ="1.66.1"
+shellcheck="0.9.0"
+shfmt     ="3.3.0"
+skaffold  ="1.14.0"
+deno      ="1.31.3"
+hyperfine ="1.16.1"
+python    ="miniconda3-4.7.12"
+chezmoi   ="2.38.0"
