--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -36,6 +36,15 @@
         {
             "before": [
                 "\\",
+                "e"
+            ],
+            "commands": [
+                "editor.showCallHierarchy"
+            ]
+        },
+        {
+            "before": [
+                "\\",
                 "r"
             ],
             "commands": [
