--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -3,9 +3,36 @@ experimental = true
 legacy_version_file_disable_tools = ['java']
 
 [tools]
-k6 = "0.50.0"
-dotnet = "8.0.203"
 azure-cli = "2.59.0"
-terraform = "1.7.5"
-node = "20.12.0"
+bin = "0.17.2"
+buildpack = "0.27.0-rc1"
+chezmoi = "2.38.0"
+devspace = "6.2.4"
+direnv = "2.32.2"
+dive = "0.10.0"
+dotnet = "8.0.203"
+duf = "0.8.1"
+gallery-dl = "1.25.1"
+gcloud = "434.0.0"
 go = "1.22.2"
+helm = "3.11.1"
+hyperfine = "1.16.1"
+jq = "1.6"
+just = "1.11.0"
+k6 = "0.50.0"
+k9s = "0.26.3"
+krew = "0.4.3"
+kubecm = "0.21.1"
+kubectl = "1.24.12"
+kubectx = "0.9.4"
+node = "20.12.0"
+nodejs = "18.17.0"
+peco = "0.5.10"
+python = "3.9.16"
+ripgrep = "12.1.1"
+rust = "1.67.0"
+shellcheck = "0.9.0"
+shfmt = "3.3.0"
+skaffold = "1.14.0"
+terraform = "1.7.5"
+zig = "0.11.0"
