--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -13,18 +13,16 @@ dotnet = "8.0.203"
 duf = "0.8.1"
 gallery-dl = "1.25.1"
 gcloud = "434.0.0"
-go = "1.22.2"
 helm = "3.11.1"
 hyperfine = "1.16.1"
 jq = "1.6"
-just = "1.11.0"
 k6 = "0.50.0"
 k9s = "0.26.3"
 krew = "0.4.3"
 kubecm = "0.21.1"
 kubectl = "1.24.12"
 kubectx = "0.9.4"
-node = "20.12.0"
+node = "20"
 nodejs = "18.17.0"
 peco = "0.5.10"
 python = "3.9.16"
@@ -35,3 +33,10 @@ shfmt = "3.3.0"
 skaffold = "1.14.0"
 terraform = "1.7.5"
 zig = "0.11.0"
+bun = "latest"
+go = "1.23.1"
+just = "1.35.0"
+flutter = "3.24.3-stable"
+fluttergen = "5.7.0"
+swift-package-list = "4.4.0"
+swiftgen = "6.6.3"
