--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -16,7 +16,6 @@ gcloud = "434.0.0"
 helm = "3.11.1"
 hyperfine = "1.16.1"
 jq = "1.6"
-k6 = "0.50.0"
 k9s = "0.26.3"
 krew = "0.4.3"
 kubecm = "0.21.1"
@@ -33,10 +32,11 @@ shfmt = "3.3.0"
 skaffold = "1.14.0"
 terraform = "1.7.5"
 zig = "0.11.0"
-bun = "latest"
 go = "1.23.1"
 just = "1.35.0"
 flutter = "3.24.3-stable"
 fluttergen = "5.7.0"
 swift-package-list = "4.4.0"
 swiftgen = "6.6.3"
+k6 = "0.54.0"
+bun = "1.1.34"
