--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -21,7 +21,6 @@ krew = "0.4.3"
 kubecm = "0.21.1"
 kubectl = "1.24.12"
 kubectx = "0.9.4"
-node = "20"
 nodejs = "18.17.0"
 peco = "0.5.10"
 python = "3.9.16"
@@ -40,3 +39,5 @@ swift-package-list = "4.4.0"
 swiftgen = "6.6.3"
 k6 = "0.54.0"
 bun = "1.1.34"
+"npm:ast-grep" = "latest"
+node = "22.11.0"
