--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -25,7 +25,7 @@ nodejs = "18.17.0"
 peco = "0.5.10"
 python = "3.9.16"
 ripgrep = "12.1.1"
-rust = "1.67.0"
+rust = "1.82.0"
 shellcheck = "0.9.0"
 shfmt = "3.3.0"
 skaffold = "1.14.0"
@@ -41,3 +41,4 @@ k6 = "0.54.0"
 bun = "1.1.34"
 "npm:ast-grep" = "latest"
 node = "22.11.0"
+"cargo:https://codeberg.org/mergiraf/mergiraf" = "tag:v0.3.0"
