--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -38,6 +38,6 @@ swift-package-list = "4.4.0"
 swiftgen = "6.6.3"
 k6 = "0.54.0"
 bun = "1.1.34"
-"npm:ast-grep" = "latest"
 node = "22.11.0"
 "cargo:https://codeberg.org/mergiraf/mergiraf" = "tag:v0.3.0"
+"ubi:ast-grep/ast-grep" = "latest"
