--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -3,8 +3,6 @@ experimental = true
 legacy_version_file_disable_tools = ['java']
 
 [tools]
-azure-cli = "2.59.0"
-buildpack = "0.27.0-rc1"
 chezmoi = "2.38.0"
 devspace = "6.2.4"
 direnv = "2.32.2"
@@ -13,13 +11,13 @@ dotnet = "8.0.203"
 duf = "0.8.1"
 gallery-dl = "1.25.1"
 gcloud = "434.0.0"
-helm = "3.11.1"
+helm = "3.16.3"
 hyperfine = "1.16.1"
 jq = "1.6"
-k9s = "0.26.3"
+k9s = "0.32.7"
 krew = "0.4.3"
 kubecm = "0.21.1"
-kubectl = "1.24.12"
+kubectl = "1.31.3"
 kubectx = "0.9.4"
 nodejs = "18.17.0"
 peco = "0.5.10"
@@ -41,3 +39,6 @@ bun = "1.1.34"
 node = "22.11.0"
 "cargo:https://codeberg.org/mergiraf/mergiraf" = "tag:v0.3.0"
 "ubi:ast-grep/ast-grep" = "latest"
+air = "1.61.1"
+"ubi:F1bonacc1/process-compose" = "latest"
+"asdf:martino/asdf-process-compose" = "latest"
