--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -19,7 +19,6 @@ krew = "0.4.3"
 kubecm = "0.21.1"
 kubectl = "1.31.3"
 kubectx = "0.9.4"
-nodejs = "18.17.0"
 peco = "0.5.10"
 python = "3.9.16"
 ripgrep = "12.1.1"
@@ -42,3 +41,9 @@ node = "22.11.0"
 air = "1.61.1"
 "ubi:F1bonacc1/process-compose" = "latest"
 "asdf:martino/asdf-process-compose" = "latest"
+kompose = "latest"
+cmctl = "latest"
+"pipx:aider-chat" = "latest"
+"ubi:getporter/porter" = "1.2.0"
+"aqua:getporter/porter/porter" = "1.2.0"
+"ubi:webrpc/webrpc" = "latest"
