--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -27,7 +27,7 @@ shellcheck = "0.9.0"
 shfmt = "3.3.0"
 terraform = "1.7.5"
 zig = "0.11.0"
-go = "1.23.1"
+go = "1.23.4"
 just = "1.35.0"
 flutter = "3.24.3-stable"
 fluttergen = "5.7.0"
@@ -47,3 +47,5 @@ cmctl = "latest"
 "ubi:getporter/porter" = "1.2.0"
 "aqua:getporter/porter/porter" = "1.2.0"
 "ubi:webrpc/webrpc" = "latest"
+"npm:wrangler" = "latest"
+"ubi:arxanas/git-branchless" = "0.9.0"
