--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,6 +1,7 @@
 [settings]
 experimental = true
 legacy_version_file_disable_tools = ['java']
+idiomatic_version_file_enable_tools = ["node"]
 
 [tools]
 chezmoi = "2.38.0"
@@ -20,9 +21,8 @@ kubecm = "0.21.1"
 kubectl = "1.31.3"
 kubectx = "0.9.4"
 peco = "0.5.10"
-python = "3.9.16"
 ripgrep = "12.1.1"
-rust = "1.82.0"
+rust = "1.87.0"
 shellcheck = "0.9.0"
 shfmt = "3.3.0"
 terraform = "1.7.5"
@@ -34,8 +34,7 @@ fluttergen = "5.7.0"
 swift-package-list = "4.4.0"
 swiftgen = "6.6.3"
 k6 = "0.54.0"
-bun = "1.1.34"
-node = "22.11.0"
+bun = "latest"
 "cargo:https://codeberg.org/mergiraf/mergiraf" = "tag:v0.3.0"
 "ubi:ast-grep/ast-grep" = "latest"
 air = "1.61.1"
@@ -49,3 +48,17 @@ cmctl = "latest"
 "ubi:webrpc/webrpc" = "latest"
 "npm:wrangler" = "latest"
 "ubi:arxanas/git-branchless" = "0.9.0"
+yt-dlp = "2025.04.30"
+uv = "latest"
+neovim = "nightly"
+"ubi:philocalyst/infat" = "latest"
+github-cli = "latest"
+"ubi:RealAlexandreAI/json-repair" = { version = "latest", exe = "jsonrepair" }
+yq = "latest"
+lazygit = "latest"
+carthage = "latest"
+"ubi:bodaay/HuggingFaceModelDownloader" = "latest"
+node = "22"
+python = "3.12"
+"npm:@anthropic-ai/claude-code" = "latest"
+sccache = "latest"
