--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -8,10 +8,17 @@ buildpack = "0.27.0-rc1"
 chezmoi = "latest"
 direnv = "2.32.2"
 go = "1.23.4"
-jq = "1.6"
+jq = "latest"
 k6 = "0.54.0"
 node = "22"
 python = "3.12"
 ripgrep = "12.1.1"
-rust = "1.87.0"
+rust = "latest"
+sccache = "latest"
 zig = "0.11.0"
+shellcheck = "latest"
+shfmt = "latest"
+uv = "latest"
+yt-dlp = "latest"
+"npm:@anthropic-ai/claude-code" = "latest"
+yq = "latest"
