Update .claude/skills/prompt-enhancer/SKILL.md Update .config/mise/config.toml Update .profile Update Library/Application Support/Code/User/keybindings.json Update setup.sh

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -4,10 +4,9 @@ legacy_version_file_disable_tools = ['java']
 idiomatic_version_file_enable_tools = ["node"]
 
 [tools]
-buildpack = "0.27.0-rc1"
 chezmoi = "latest"
 direnv = "2.32.2"
-go = "1.23.4"
+go = "1.25.1"
 jq = "latest"
 k6 = "0.54.0"
 node = "22"
@@ -20,5 +19,18 @@ shellcheck = "latest"
 shfmt = "latest"
 uv = "latest"
 yt-dlp = "latest"
-"npm:@anthropic-ai/claude-code" = "latest"
 yq = "latest"
+"ubi:arxanas/git-branchless" = "latest"
+neovim = "0.11.0"
+lazygit = "latest"
+"ubi:github/github-mcp-server" = "latest"
+"npm:@anthropic-ai/claude-code" = "latest"
+dasel = "latest"
+ollama = "latest"
+"ubi:nguyenvanduocit/rag-kit" = "latest"
+"ubi:jj-vcs/jj" = "latest"
+hurl = "latest"
+"ubi:karust/openserp" = "0.5.3"
+"npm:@bifrost_inc/superclaude" = "latest"
+"npm:bwc-cli" = "latest"
+"npm:claude-code-templates" = "latest"
