Add .claude/hooks/skill-activation-prompt.ts Remove .claude/hooks/skill-activation-prompt.ts Update .claude/skills/skill-rules.json Update .config/mise/config.toml

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -21,7 +21,7 @@ uv = "latest"
 yt-dlp = "latest"
 yq = "latest"
 "ubi:arxanas/git-branchless" = "latest"
-neovim = "0.11.0"
+neovim = "0.11.4"
 lazygit = "latest"
 "ubi:github/github-mcp-server" = "latest"
 "npm:@anthropic-ai/claude-code" = "latest"
@@ -34,3 +34,4 @@ hurl = "latest"
 "npm:@bifrost_inc/superclaude" = "latest"
 "npm:bwc-cli" = "latest"
 "npm:claude-code-templates" = "latest"
+rg = "latest"
