--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -35,3 +35,5 @@ hurl = "latest"
 "npm:bwc-cli" = "latest"
 "npm:claude-code-templates" = "latest"
 rg = "latest"
+cloudflared = "latest"
+"aqua:codeberg.org/mergiraf/mergiraf" = "latest"
