--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -20,20 +20,17 @@ shfmt = "latest"
 uv = "latest"
 yt-dlp = "latest"
 yq = "latest"
-"ubi:arxanas/git-branchless" = "latest"
 neovim = "0.11.4"
 lazygit = "latest"
 "ubi:github/github-mcp-server" = "latest"
 "npm:@anthropic-ai/claude-code" = "latest"
 dasel = "latest"
-ollama = "latest"
-"ubi:nguyenvanduocit/rag-kit" = "latest"
 "ubi:jj-vcs/jj" = "latest"
 hurl = "latest"
 "ubi:karust/openserp" = "0.5.3"
-"npm:@bifrost_inc/superclaude" = "latest"
-"npm:bwc-cli" = "latest"
-"npm:claude-code-templates" = "latest"
 rg = "latest"
 cloudflared = "latest"
 "aqua:codeberg.org/mergiraf/mergiraf" = "latest"
+"npm:@google/gemini-cli" = "latest"
+"ubi:router-for-me/CLIProxyAPI" = { version = "latest", exe = "cli-proxy-api" }
+ast-grep = "latest"
