--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -5,13 +5,13 @@ idiomatic_version_file_enable_tools = ["node"]
 
 [tools]
 chezmoi = "latest"
-direnv = "2.32.2"
+direnv = "latest"
 go = "1.25.1"
 jq = "latest"
-k6 = "0.54.0"
+k6 = "latest"
 node = "22"
 python = "3.12"
-ripgrep = "12.1.1"
+ripgrep = "latest"
 rust = "latest"
 sccache = "latest"
 zig = "0.11.0"
@@ -27,7 +27,6 @@ lazygit = "latest"
 dasel = "latest"
 "ubi:jj-vcs/jj" = "latest"
 hurl = "latest"
-"ubi:karust/openserp" = "0.5.3"
 rg = "latest"
 cloudflared = "latest"
 "aqua:codeberg.org/mergiraf/mergiraf" = "latest"
