--- a/dot_config/terminator/config
+++ b/dot_config/terminator/config
@@ -2,13 +2,6 @@
   handle_size = 0
   geometry_hinting = True
   window_state = maximise
-  title_hide_sizetext = True
-  title_transmit_fg_color = "#bd93f9"
-  title_transmit_bg_color = "#282a36"
-  title_receive_fg_color = "#8be9fd"
-  title_receive_bg_color = "#282a36"
-  title_inactive_fg_color = "#f8f8f2"
-  title_inactive_bg_color = "#282a36"
   inactive_color_offset = 0.8194444444444444
   suppress_multiple_term_dialog = True
 [keybindings]
@@ -18,8 +11,7 @@
     background_darkness = 0.48
     cursor_blink = False
     cursor_shape = underline
-    cursor_color = "#bbbbbb"
-    font = FiraCode Nerd Font Mono 10
+    font = FiraCode Nerd Font 10
     foreground_color = "#f8f8f2"
     scrollbar_position = hidden
     scrollback_infinite = True
@@ -29,7 +21,6 @@
     copy_on_selection = True
   [[terminator_default]]
     background_color = "#282a36"
-    cursor_color = "#f8f8f2"
     foreground_color = "#f8f8f2"
     palette = "#44475a:#ff5555:#50fa7b:#ffb86c:#3465a4:#ff79c6:#f1fa8c:#44475a:#44475a:#ff5555:#50fa7b:#ffb86c:#729fcf:#ad7fa8:#f1fa8c:#44475a"
 [layouts]
