--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -10,7 +10,7 @@ go = "1.25.1"
 jq = "latest"
 k6 = "latest"
 node = "22"
-python = "3.12"
+python = "3.11"
 ripgrep = "latest"
 rust = "latest"
 sccache = "latest"
@@ -33,3 +33,9 @@ cloudflared = "latest"
 "npm:@google/gemini-cli" = "latest"
 "ubi:router-for-me/CLIProxyAPI" = { version = "latest", exe = "cli-proxy-api" }
 ast-grep = "latest"
+starship = "latest"
+zoxide = "latest"
+delta = "latest"
+"npm:@kaitranntt/ccs" = "latest"
+"npm:@beads/bd" = "latest"
+usage = "latest"
