--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -22,16 +22,16 @@ yt-dlp = "latest"
 yq = "latest"
 neovim = "0.11.4"
 lazygit = "latest"
-"ubi:github/github-mcp-server" = "latest"
+"github:github/github-mcp-server" = "latest"
 "npm:@anthropic-ai/claude-code" = "latest"
 dasel = "latest"
-"ubi:jj-vcs/jj" = "latest"
+"github:jj-vcs/jj" = "latest"
 hurl = "latest"
 rg = "latest"
 cloudflared = "latest"
 "aqua:codeberg.org/mergiraf/mergiraf" = "latest"
 "npm:@google/gemini-cli" = "latest"
-"ubi:router-for-me/CLIProxyAPI" = { version = "latest", exe = "cli-proxy-api" }
+"github:router-for-me/CLIProxyAPI" = { version = "latest", exe = "cli-proxy-api" }
 ast-grep = "latest"
 starship = "latest"
 zoxide = "latest"
