--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -39,3 +39,5 @@ delta = "latest"
 "npm:@kaitranntt/ccs" = "latest"
 "npm:@beads/bd" = "latest"
 usage = "latest"
+aqua = "latest"
+"npm:@fission-ai/openspec" = "latest"
