--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -29,7 +29,6 @@ dasel = "latest"
 hurl = "latest"
 rg = "latest"
 cloudflared = "latest"
-"aqua:codeberg.org/mergiraf/mergiraf" = "latest"
 "npm:@google/gemini-cli" = "latest"
 "github:router-for-me/CLIProxyAPI" = { version = "latest", exe = "cli-proxy-api" }
 ast-grep = "latest"
@@ -39,5 +38,4 @@ delta = "latest"
 "npm:@kaitranntt/ccs" = "latest"
 "npm:@beads/bd" = "latest"
 usage = "latest"
-aqua = "latest"
-"npm:@fission-ai/openspec" = "latest"
+"forgejo:mergiraf/mergiraf" = "latest"
