--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -39,3 +39,4 @@ delta = "latest"
 "npm:@beads/bd" = "latest"
 usage = "latest"
 "forgejo:mergiraf/mergiraf" = "latest"
+"npm:memvid-cli" = "latest"
