--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -55,3 +55,5 @@ doggo = "latest"
 jnv = "latest"
 "github:asyrjasalo/dynamic-mcp" = "latest"
 "github:ouch-org/ouch" = "latest"
+rclone = "latest"
+"npm:ccusage" = "latest"
