--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -37,7 +37,6 @@ dasel = "latest"
 hurl = "latest"
 rg = "latest"
 cloudflared = "latest"
-"npm:@google/gemini-cli" = "latest"
 "github:router-for-me/CLIProxyAPI" = { version = "latest", exe = "cli-proxy-api" }
 ast-grep = "latest"
 starship = "latest"
@@ -55,6 +54,9 @@ doggo = "latest"
 jnv = "latest"
 "github:asyrjasalo/dynamic-mcp" = "latest"
 "github:ouch-org/ouch" = "latest"
-rclone = "latest"
 "npm:ccusage" = "latest"
+gcloud = "latest"
+"github:memextech/ht-mcp" = "latest"
+gemini-cli = "latest"
 "npm:mcp-chrome-bridge" = "latest"
+rclone = "latest"
