Add .config/mise/config.local.toml Update .config/mise/config.toml

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -54,13 +54,13 @@ jnv = "latest"
 "github:asyrjasalo/dynamic-mcp" = "latest"
 "github:ouch-org/ouch" = "latest"
 "npm:ccusage" = "latest"
-gcloud = "latest"
 "github:memextech/ht-mcp" = "latest"
 gemini-cli = "latest"
 "npm:mcp-chrome-bridge" = "latest"
 rclone = "latest"
-"github:bettercap/bettercap" = "latest"
 git-lfs = "latest"
+kubectl = "latest"
+k9s = "latest"
 claude-code = { version = "latest", bin = "claude", platforms = """
 [linux-arm64]
 url = "https://storage.googleapis.com/claude-code-dist-86c565f3-f756-42ad-8dfa-d59b1c096819/claude-code-releases/{{ version }}/linux-arm64/claude"
