--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -74,3 +74,4 @@ url = "https://storage.googleapis.com/claude-code-dist-86c565f3-f756-42ad-8dfa-d
 """, version_list_url = "https://storage.googleapis.com/claude-code-dist-86c565f3-f756-42ad-8dfa-d59b1c096819/claude-code-releases/latest" }
 "github:bettercap/bettercap" = "latest"
 pnpm = "latest"
+"npm:playwriter" = "latest"
