--- a/bak.chezmoiexternal.toml
+++ b/bak.chezmoiexternal.toml
@@ -1,16 +1,16 @@
-[".claude/skills/playwriter/SKILL.md"]
+[".ccp/hub/skills/playwriter/SKILL.md"]
     type = "file"
     url = "https://raw.githubusercontent.com/remorses/playwriter/main/skills/playwriter/SKILL.md"
     refreshPeriod = "168h"
 
-# ui-ux-pro-max: SKILL.md from .claude/skills path
-[".claude/skills/0-ui-ux-pro-max/SKILL.md"]
+# ui-ux-pro-max: SKILL.md from .ccp/hub/skills path
+[".ccp/hub/skills/0-ui-ux-pro-max/SKILL.md"]
     type = "file"
-    url = "https://raw.githubusercontent.com/nextlevelbuilder/ui-ux-pro-max-skill/main/.claude/skills/ui-ux-pro-max/SKILL.md"
+    url = "https://raw.githubusercontent.com/nextlevelbuilder/ui-ux-pro-max-skill/main/.ccp/hub/skills/ui-ux-pro-max/SKILL.md"
     refreshPeriod = "168h"
 
 # ui-ux-pro-max: data files from src path
-[".claude/skills/0-ui-ux-pro-max/data"]
+[".ccp/hub/skills/0-ui-ux-pro-max/data"]
     type = "archive"
     url = "https://github.com/nextlevelbuilder/ui-ux-pro-max-skill/archive/refs/heads/main.tar.gz"
     stripComponents = 4
@@ -18,7 +18,7 @@
     refreshPeriod = "168h"
 
 # ui-ux-pro-max: scripts from src path
-[".claude/skills/0-ui-ux-pro-max/scripts"]
+[".ccp/hub/skills/0-ui-ux-pro-max/scripts"]
     type = "archive"
     url = "https://github.com/nextlevelbuilder/ui-ux-pro-max-skill/archive/refs/heads/main.tar.gz"
     stripComponents = 4
