--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -75,3 +75,4 @@ url = "https://storage.googleapis.com/claude-code-dist-86c565f3-f756-42ad-8dfa-d
 "github:bettercap/bettercap" = "latest"
 pnpm = "latest"
 "github:samhvw8/claude-code-profile" = "latest"
+"npm:playwriter" = "latest"
